added icons and changed color theme to about.html, modified some colors on index.html

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2604,7 +2604,7 @@ input, select, textarea {
 
 			.features li:before {
 				display: block;
-				color: #00ffcc;
+				color: #FDB515;
 				position: absolute;
 				left: 1.75em;
 				top: 2.75em;
@@ -2980,7 +2980,7 @@ input, select, textarea {
 		}
 
 		.wrapper.style3 {
-			background-color: #505393;
+			background-color: #3B7EA1;
 			color: #d3d4e4;
 		}
 
